--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary mb-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Jacen Sekai</a>
+    <a class="navbar-brand" href="/">
+      <img src="/img/you.png" width="30" height="30" />
+      Jacen Sekai
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
