Add Disqus comments and fix styling issues

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary mb-3">
+<nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary mb-3" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <img src="/img/you.png" width="30" height="30" />
