--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 <div class="container-fluid text-center mb-4">
   <hr />
+  <a href="https://github.com/JacenBoy/jacens-site" target="_blank">View on GitHub</a>
+  <br /><br />
   <a href="https://neocities.org/" target="_blank"><img src="/img/neocities.png" alt="Neocities Logo" /></a>
 </div>
