--- a/_includes/post.html
+++ b/_includes/post.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }} | Jacen Sekai</title>
+
+    <meta property="og:title" content="{{ title }} | Jacen Sekai" />
+    <meta property="og:description" content="Jacen's personal website" />
+    <meta property="og:image" content="https://jacen.moe/img/you.png" />
+    <meta property="og:url" content="https://jacen.moe{{ page.url }}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="Jacen Sekai" />
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="@jacenboy" />
+    <meta property="twitter:image" content="https://jacen.moe/img/you.png" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/prism-material-dark.css">
     <link rel="stylesheet" href="/styles/overrides.css">
