Add excerpt to OG tags

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -6,7 +6,7 @@
     <title>{{ title }} | Jacen Sekai</title>
 
     <meta property="og:title" content="{{ title }} | Jacen Sekai" />
-    <meta property="og:description" content="Jacen's personal website" />
+    <meta property="og:description" content="{{ page.excerpt }}" />
     <meta property="og:image" content="https://jacen.moe/img/you.png" />
     <meta property="og:url" content="https://jacen.moe{{ page.url }}" />
     <meta property="og:type" content="article" />
