--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,6 +16,9 @@
           <a class="nav-link" href="/rants">Rants</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/ships">Shipping</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
