Tweaking font sizes

--- a/_includes/ship.html
+++ b/_includes/ship.html
@@ -38,7 +38,7 @@ permalink: "ships/{{ franchise | slugify }}/{{ title | slugify }}/"
         {% endif %}
 
         <div class="container-fluid d-flex align-items-center justify-content-center mb-4">
-          <div class="w-50">
+          <div class="w-75 fs-4">
             {{ content }}
           </div>
         </div>
