--- a/_includes/ship.html
+++ b/_includes/ship.html
@@ -30,7 +30,7 @@ permalink: "ships/{{ franchise | slugify }}/{{ title | slugify }}/"
 
     <main>
       <div class="container mb-4">
-        <p class="lead text-center">Shipping Discussion</p>
+        <p class="display-6 text-center">Shipping Discussion</p>
         <h1 class="text-center">{{ franchise }} - {{ title }}</h1>
         <hr />
         {% if problematic %}
