--- a/_includes/ship.html
+++ b/_includes/ship.html
@@ -20,6 +20,9 @@ permalink: "ships/{{ franchise | slugify }}/{{ title | slugify }}/"
     <meta property="twitter:site" content="@jacenboy" />
     <meta property="twitter:image" content="https://jacen.moe/img/you.png" />
 
+    <link rel="me" href="https://mastodon.jacen.moe/@jacenboy" />
+    <meta name="fediverse:creator" content="@jacenboy@mastodon.jacen.moe">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/overrides.css">
 
