Crawling back to Google Analytics

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,1 +1,9 @@
-<script defer src="https://cloud.umami.is/script.js" data-website-id="d3e8aa73-26c9-4906-8fff-9f8b37012b85"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XPYPK0R99X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XPYPK0R99X');
+</script>
