Add basic RSS feed support

--- a/_includes/main.html
+++ b/_includes/main.html
@@ -15,6 +15,7 @@
     <meta property="twitter:site" content="@jacenboy" />
     <meta property="twitter:image" content="https://jacen.moe/img/you.png" />
 
+    <link rel="alternate" type="application/atom+xml" title="All Posts" href="https://jacen.moe/feeds/main.xml" />
     <link rel="me" href="https://mastodon.jacen.moe/@jacenboy" />
     <meta name="fediverse:creator" content="@jacenboy@mastodon.jacen.moe">
 
