--- a/_includes/main.html
+++ b/_includes/main.html
@@ -16,8 +16,12 @@
     <meta property="twitter:image" content="https://jacen.moe/img/you.png" />
 
     <link rel="alternate" type="application/atom+xml" title="All Posts" href="https://jacen.moe/feeds/main.xml" />
+
     <link rel="me" href="https://mastodon.jacen.moe/@jacenboy" />
     <meta name="fediverse:creator" content="@jacenboy@mastodon.jacen.moe">
+
+    <link href="mailto:indieauth@jacen.moe" rel="me" />
+    <link rel="authorization_endpoint" href="https://indieauth.com/auth">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/overrides.css">
