--- a/_includes/main.html
+++ b/_includes/main.html
@@ -18,6 +18,7 @@
     <link rel="alternate" type="application/atom+xml" title="All Posts" href="https://jacen.moe/feeds/main.xml" />
 
     <link rel="me" href="https://mastodon.jacen.moe/@jacenboy" />
+    <link rel="me" href="https://libre.fm/user/JacenSekai" />
     <meta name="fediverse:creator" content="@jacenboy@mastodon.jacen.moe">
 
     <link href="mailto:indieauth@jacen.moe" rel="me" />
