--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,7 @@
   <hr />
   <a href="https://github.com/JacenBoy/jacens-site" target="_blank">View on GitHub</a>
   <br /><br />
+  <a href="/privacy">Privacy Policy</a>
+  <br /><br />
   <a href="https://neocities.org/site/jacensekai" target="_blank"><img src="/img/neocities.png" alt="Neocities Logo" /></a>
 </div>
