--- a/styles/overrides.css
+++ b/styles/overrides.css
@@ -65,6 +65,11 @@ pre code {
   margin-right: 1em;
 }
 
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  margin-top: 3rem;
+  margin-bottom: 0.75rem;
+}
+
 .post-title-link {
   text-decoration: none;
 }
@@ -91,4 +96,8 @@ pre code {
 img.profile {
   max-width: 80px;
   max-height: 80px;;
+}
+
+.card-title, .card-subtitle {
+  margin-top: 0;
 }
