--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/socials">Socials</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/donate">Donate</a>
+        </li>
     </div>
   </div>
 </nav>
