--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,6 +22,9 @@
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/search">Search</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/socials">Socials</a>
         </li>
         <li class="nav-item">
