--- a/_includes/main.html
+++ b/_includes/main.html
@@ -20,6 +20,7 @@
     <link rel="me" href="https://mastodon.jacen.moe/@jacenboy" />
     <link rel="me" href="https://libre.fm/user/JacenSekai" />
     <meta name="fediverse:creator" content="@jacenboy@mastodon.jacen.moe">
+    <meta name="verification" content="9a57ec1e0bd7803e9bd2dcff3af8ddb0" />
 
     <link href="mailto:indieauth@jacen.moe" rel="me" />
     <link rel="authorization_endpoint" href="https://indieauth.com/auth">
