--- a/_includes/main.html
+++ b/_includes/main.html
@@ -30,6 +30,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@idotj/mastodon-embed-timeline@4.7.0/dist/mastodon-timeline.min.css" integrity="sha256-Qi3H+bdH6RuMuyR1trAlG5bMWJGl9y3jPiTc1PWQFpI=" crossorigin="anonymous">
 
+    <link href="/pagefind/pagefind-ui.css" rel="stylesheet">
+    <style>
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --pagefind-ui-primary: #eeeeee;
+          --pagefind-ui-text: #eeeeee;
+          --pagefind-ui-background: #152028;
+          --pagefind-ui-border: #152028;
+          --pagefind-ui-tag: #152028;
+        }
+      }
+    </style>
+
     <link rel="stylesheet" href="/styles/overrides.css">
 
     {% include "analytics.html" %}
